--- a/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
+++ b/src/app/modules/contests/components/contests-table/contest-standings-popover/contest-standings-popover.component.html
@@ -13,7 +13,7 @@
         <thead>
         <tr class="bg-gradient-primary">
           <th class="text-center">#</th>
-          <th>{{ 'Contests.ContestANT' | translate }}</th>
+          <th>{{ 'Contests.Contestant' | translate }}</th>
           <th class="text-center"><i [data-feather]="'rating' | iconName"></i></th>
         </tr>
         </thead>
