--- a/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
+++ b/src/app/modules/contests/pages/contest/contest-rating-changes/contest-rating-changes.component.html
@@ -12,7 +12,7 @@
       <ng-container header>
         <tr>
           <th class="text-center">#</th>
-          <th>{{ 'Contests.ContestANT' | translate }}</th>
+          <th>{{ 'Contests.Contestant' | translate }}</th>
           <th class="text-center"><i [data-feather]="'rating' | iconName"></i></th>
           <th class="text-center"><i [data-feather]="'delta' | iconName"></i></th>
           <th>{{ 'Contests.NewRating' | translate }}</th>
