--- a/src/app/modules/contests/pages/contest/contest-standings/contest-standings-table/contest-standings-table.component.html
+++ b/src/app/modules/contests/pages/contest/contest-standings/contest-standings-table/contest-standings-table.component.html
@@ -5,7 +5,7 @@
   <ng-container header>
     <tr>
       <th class="text-center">#</th>
-      <th>{{ 'Contests.ContestANT' | translate }}</th>
+      <th>{{ 'Contests.Contestant' | translate }}</th>
       <th class="text-center">{{ 'Contests.Points' | translate }}</th>
 
       @if (contest.isRated) {
@@ -103,7 +103,7 @@
   <ng-container footer>
     <tr>
       <th class="text-center text-dark">#</th>
-      <th class="text-dark">{{ 'Contests.ContestANT' | translate }}</th>
+      <th class="text-dark">{{ 'Contests.Contestant' | translate }}</th>
       <th class="text-center">{{ 'Contests.Points' | translate }}</th>
       @if (contest.isRated) {
         <th class="text-center">
