--- a/src/app/modules/duels/ui/pages/duels-rating/duels-rating.page.html
+++ b/src/app/modules/duels/ui/pages/duels-rating/duels-rating.page.html
@@ -79,19 +79,18 @@
               <kep-card customClass="h-100">
                 <div class="card-body d-flex flex-column gap-3">
                   <div class="d-flex align-items-center gap-3 flex-wrap">
-                    <span class="badge rounded-pill bg-primary text-white px-3 py-2 fs-6">{{ duelsRating.rowIndex }}</span>
-                    <user-avatar-popover
-                      [username]="duelsRating.user.username"
-                      [avatar]="duelsRating.user.avatar">
-                    </user-avatar-popover>
-                    <div class="d-flex flex-column">
-                      <a
-                        [routerLink]="Resources.UserProfile | resourceByUsername:duelsRating.user.username"
-                        class="fw-semibold text-body text-decoration-none">
-                        {{ duelsRating.user.username }}
-                      </a>
-                      <span class="text-muted small">{{ 'Duels' | translate }}: {{ duelsRating.duels }}</span>
-                    </div>
+                    <span class="badge bg-primary fw-semibold text-white px-3 py-2 fs-6">{{ duelsRating.rowIndex }}</span>
+                    <user-popover [customContent]="true" [username]="duelsRating.user.username">
+                      <div class="d-flex gap-2 justify-content-center align-items-center">
+                        <img [src]="duelsRating.user.avatar" class="avatar avatar-rounded" height="32">
+                        <div class="text-dark">
+                          <div>
+                            {{ duelsRating.user.username }}
+                          </div>
+                          <span class="text-muted small">{{ 'Duels' | translate }}: {{ duelsRating.duels }}</span>
+                        </div>
+                      </div>
+                    </user-popover>
                   </div>
                   <div class="d-flex flex-wrap gap-2">
                     <div class="badge bg-success-transparent text-success d-inline-flex align-items-center gap-2 px-3 py-2">
