feat(contests): add contest statistics page

--- a/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.html
+++ b/src/app/modules/contests/pages/contest/contest-tab/contest-tab.component.html
@@ -40,6 +40,16 @@
     }
     @if (contest?.status != -1) {
       <li ngbNavItem>
+        <a class="nav-link" [routerLink]="Resources.ContestStatistics | resourceById:contest?.id"
+           routerLinkActive="active">
+          <kep-icon name="statistics"></kep-icon>
+          {{ 'Statistics' | translate }}</a>
+        <ng-template ngbNavContent>
+        </ng-template>
+      </li>
+    }
+    @if (contest?.status != -1) {
+      <li ngbNavItem>
         <a class="nav-link" [routerLink]="Resources.ContestStandings | resourceById:contest?.id"
            routerLinkActive="active">
           <kep-icon name="ranking"></kep-icon>
