Refactor problems statistics to unified API

--- a/src/app/modules/problems/pages/statistics/section-activity/section-activity.component.html
+++ b/src/app/modules/problems/pages/statistics/section-activity/section-activity.component.html
@@ -1,1 +1,6 @@
-<problems-activity-card [username]="username"></problems-activity-card>
+<problems-activity-card
+  [activity]="activity"
+  [allowedDays]="allowedDays"
+  [days]="days"
+  (daysChange)="daysChange.emit($event)"
+></problems-activity-card>
