--- a/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
+++ b/src/app/modules/problems/components/problems-activity-card/problems-activity-card.component.html
@@ -1,30 +1,37 @@
 <kep-card>
-  @if (isLoading) {
-    <div [style.height.px]="200">
-      <spinner></spinner>
+  <div class="card-header">
+    <div class="card-title">
+      {{ 'Activity' | translate }}
     </div>
-  } @else {
-    <div class="card-header">
-      <div class="card-title">
-        {{ 'Activity' | translate }}
+    @if (allowedDays?.length) {
+      <div role="group" aria-label="{{ 'Activity' | translate }}" class="btn-group">
+        @for (option of allowedDays; track option) {
+          <input
+            type="radio"
+            class="btn-check"
+            [id]="'activity-days-' + option"
+            name="activity-days"
+            [checked]="activityDays === option"
+            (change)="onDaysChange(option)"
+          >
+          <label [for]="'activity-days-' + option" class="btn btn-outline-primary">{{ option }}</label>
+        }
       </div>
-      <div role="group" aria-label="Basic radio toggle button group" class="btn-group">
-        <input [(ngModel)]="activityDays" (click)="activityDataUpdate(7)"  [value]="7" type="radio" name="btnradio" id="btnradio1" checked="" class="btn-check">
-        <label for="btnradio1" class="btn btn-outline-primary">7</label>
-        <input [(ngModel)]="activityDays" (click)="activityDataUpdate(14)"  [value]="14" type="radio" name="btnradio" id="btnradio2" class="btn-check">
-        <label for="btnradio2" class="btn btn-outline-primary">14</label>
-        <input [(ngModel)]="activityDays" (click)="activityDataUpdate(30)"  [value]="30" type="radio" name="btnradio" id="btnradio3" class="btn-check">
-        <label for="btnradio3" class="btn btn-outline-primary">30</label>
-      </div>
-    </div>
+    }
+  </div>
 
-    <div class="card-body">
+  <div class="card-body">
+    @if (isLoading) {
+      <div [style.height.px]="200" class="d-flex align-items-center justify-content-center">
+        <spinner></spinner>
+      </div>
+    } @else {
       <div class="mt-2">
-        <div class="row">
+        <div class="row g-1">
           <div [ngClass]="{
-          'col-6': activitySolved > 0,
-          'col-12': activitySolved == 0
-        }">
+            'col-6': activitySolved > 0,
+            'col-12': activitySolved === 0
+          }">
             <div class="text-center">
               <div class="avatar bg-primary-transparent p-50 m-0 mb-1">
                 <div class="avatar-content">
@@ -43,6 +50,6 @@
           </div>
         </div>
       </div>
-    </div>
-  }
+    }
+  </div>
 </kep-card>
