--- a/src/app/modules/problems/pages/statistics/statistics.component.html
+++ b/src/app/modules/problems/pages/statistics/statistics.component.html
@@ -1,35 +1,95 @@
 @if (username) {
   <div class="content-wrapper container-xxl p-0">
-    <div class="content-body">
-      <section class="mt-2">
-        <div class="row">
-          <div class="col-lg-3 col-md-6 col-sm-12">
-            <section-profile [username]="username"></section-profile>
-          </div>
-          <div class="col-lg-9 col-md-6 col-sm-12">
-            <div class="row">
-              <div class="col-lg-6 col-12">
-                <section-difficulties [username]="username"></section-difficulties>
+    <div class="content-body problems-statistics">
+      @if (!statistics && isLoading) {
+        <div class="statistics-spinner">
+          <spinner></spinner>
+        </div>
+      }
+
+      @if (statistics) {
+        <div class="statistics-layout">
+          <div class="row g-2">
+            <div class="col-12">
+              <div class="row g-2">
+                @for (card of overviewCards; track card.key) {
+                  <div class="col-sm-6 col-xl-3">
+                    <kep-card class="overview-card">
+                      <div class="card-body d-flex align-items-center justify-content-between">
+                        <div>
+                          <p class="card-label mb-25">{{ card.label | translate }}</p>
+                          <h3 class="card-value mb-0">{{ card.value }}</h3>
+                          @if (card.subtitle) {
+                            <p class="card-subtitle mb-0 text-muted">{{ card.subtitle }}</p>
+                          }
+                        </div>
+                        <div class="avatar bg-{{ card.iconColor }}-transparent p-50">
+                          <div class="avatar-content">
+                            <kep-icon [name]="card.icon"></kep-icon>
+                          </div>
+                        </div>
+                      </div>
+                    </kep-card>
+                  </div>
+                }
               </div>
-              <div class="col-lg-6 col-12">
-                <section-activity [username]="username"></section-activity>
-              </div>
-              <div class="col-12">
-                <section-heatmap [username]="username"></section-heatmap>
-              </div>
-              <div class="col-lg-6 col-12">
-                <section-facts [username]="username"></section-facts>
-              </div>
-              <div class="col-lg-6 col-12">
-                <section-attempts-for-solve [username]="username"></section-attempts-for-solve>
-              </div>
-              <div class="col-12">
-                <section-time [username]="username"></section-time>
+            </div>
+
+            <div class="col-xl-3 col-lg-4 col-md-6">
+              <section-profile
+                [username]="username"
+                [general]="statistics.general"
+                [langs]="statistics.byLang"
+                [tags]="statistics.byTag"
+                [topics]="statistics.byTopic"
+              ></section-profile>
+            </div>
+
+            <div class="col-xl-9 col-lg-8">
+              <div class="row g-2">
+                <div class="col-xl-6 col-lg-12">
+                  <section-activity
+                    [activity]="statistics.lastDays"
+                    [allowedDays]="allowedDays"
+                    [days]="selectedDays"
+                    (daysChange)="onActivityRangeChange($event)"
+                  ></section-activity>
+                </div>
+                <div class="col-xl-6 col-lg-12">
+                  <section-difficulties [data]="statistics.byDifficulty"></section-difficulties>
+                </div>
+                <div class="col-12">
+                  <section-heatmap
+                    [heatmap]="statistics.heatmap"
+                    [years]="availableYears"
+                    [selectedYear]="selectedYear"
+                    (yearChange)="onHeatmapYearChange($event)"
+                  ></section-heatmap>
+                </div>
+                <div class="col-xl-6 col-lg-12">
+                  <section-facts [facts]="statistics.facts"></section-facts>
+                </div>
+                <div class="col-xl-6 col-lg-12">
+                  <section-attempts-for-solve [data]="statistics.numberOfAttempts"></section-attempts-for-solve>
+                </div>
+                <div class="col-12">
+                  <section-time
+                    [weekdays]="statistics.byWeekday"
+                    [months]="statistics.byMonth"
+                    [periods]="statistics.byPeriod"
+                  ></section-time>
+                </div>
               </div>
             </div>
           </div>
         </div>
-      </section>
+      }
+
+      @if (isLoading && statistics) {
+        <div class="statistics-overlay">
+          <spinner></spinner>
+        </div>
+      }
     </div>
   </div>
 }
