refactor: convert problems statistics sections to widgets

--- a/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-header/section-header.component.html
@@ -7,7 +7,7 @@
           {{ 'Rating' | translate }}
         </span>
       </a>
-      <a [ngClass.lt-md]="'btn-sm'" class="btn btn-primary-light" routerLink="statistics">
+      <a [ngClass.lt-md]="'btn-sm'" class="btn btn-primary-light" routerLink="user-statistics">
         <kep-icon class="font-medium-1" name="statistics"></kep-icon>
         <span [ngClass.lt-md]="'d-none'">
           {{ 'Statistics' | translate }}
