--- a/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-info/section-info.component.html
@@ -16,7 +16,7 @@
       <kep-icon name="rating"></kep-icon>
       {{ 'Rating' | translate }}
     </a>
-    <a routerLink="statistics" class="btn btn-primary mr-md-1 me-1">
+    <a routerLink="user-statistics" class="btn btn-primary mr-md-1 me-1">
       <kep-icon name="statistics"></kep-icon>
       {{ 'Statistics' | translate }}
     </a>
