--- a/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
+++ b/src/app/modules/problems/pages/problems/sections/section-sidebar/section-sidebar.component.html
@@ -41,7 +41,7 @@
             }
           </div>
           <div class="card-footer text-center">
-            <a class="btn btn-primary bg-primary btn-sm round" routerLink="statistics">
+            <a class="btn btn-primary bg-primary btn-sm round" routerLink="user-statistics">
               {{ 'DetailedStatistics' | translate }}
               <i data-feather="arrow-right"></i>
             </a>
